Complete quote section, fix header alignment

--- a/style/style.css
+++ b/style/style.css
@@ -11,11 +11,14 @@ body {
 }
 .header {
     display: flex;
-    justify-content: space-around;
+    align-items: center;
     padding-top: 14px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 #nav {
+    margin-left: auto;
     font-size: 16px;
     color: #e5e6eb;
     display: flex;
@@ -107,18 +110,28 @@ ul {
     padding-bottom: 64px;
 }
 
-
-
-
-
-
-
-
-
-
+/*Quote*/
 .container-three {
+    padding: 64px;
     background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
 }
+
+#quote {
+    margin-bottom: 0px;
+    font-size: 36px;
+    font-weight: 300px;
+    color: #1f2937;
+}
+
+#quote-author {
+    align-self: flex-end;
+    font-size: 20px;
+    font-weight: bold;
+    color: #1f2937;
+}
+
 
 .container-four {
     background-color: #ffffff;
